fixes #5, wrong z-index.

--- a/mdki/mdki.css
+++ b/mdki/mdki.css
@@ -4,7 +4,7 @@
 	position: fixed;
 	top: -300px;
 	margin: 0 auto;
-	z-index: 111;
+	z-index: 1111;
 	background-color: 
 	#FFFFF2;
 	padding: 20px;
